<resources>
    <string name="app_name">ProMotion</string>
    <string name="btn_Aceptar">Ok</string>
    <string name="btn_abrir_ventana">Next</string>
    <string name="welcome_text">Estos son mis posts</string>
    <string name="Tittle_Notification">ProMotion Notification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search Me</string>
    <string name="search">Search</string>
    <string name="title_activity_near">TO CLOSER</string>
    <string name="title_activity_promotion_detail">PromotionDetailActivity</string>
    <string name="text_share">Download now ProMotion App !! The best app for promotions now https://play.google.com/store?hl=en</string>
    <string name="app_description">En ProMotion App podras encontrar las mejores ofertas en promociones publicadas por comercios afiliados a nuestro portal, asi como tambien podras ubicarlos y mucho mas...</string>
    <string name="app_description2">In ProMotion App will find the bests offers and promotions published by affiliated commerces in our portal. Also can locate stores and more. </string>
    <string name="contactanos">Puedes contactarnos a por correo electronico o a traves de una simple llamada a nuestra central telefonica:</string>
    <string name="contactanos2">You can contact us by email or a simple phone call:</string>
    <string name="app_suscribe">Para suscribirte a la cadena de comercios afiliados a ProMotion app debes ingresar a nuestro portal administrativo para realizar el registro de tu comercio y empezar a ofrecer tus mejores servicios y promociones con nosotros.</string>
    <string name="app_suscribe2">If you want to subscribe to commerce chains affiliate to ProMotion app, should be to enter to our administrative portal and register your commerces to begin to offer the best services and promotions with us.</string>
    <string name="text_email">En ProMotion App, trabajamos para tu comodidad y bienestar, Ingresa aca tu comentario, critica o propuesta! En la brevedad posible nuestros operadores estaran contactandote de ser necesario.</string>
    <string name="configuracion">Configuración</string>
    <string name="configuracion2">Settings</string>
    <string name="version_app">ProMotion App V 1.0.0</string>
    <string name="condicion">* Recomendado Diariamente</string>
    <string name="condicion2">* Daily Recommended</string>
    <string name="texto_notificaciones">Frecuencia de envio de notificaciones para mis promociones por tienda:</string>
    <string name="texto_notificaciones2">Frequency of sending notifications of promotions per store:</string>

    <string name="start">HOME</string>
    <string name="category">CATEGORIES</string>
    <string name="toCloser">CLOSER</string>
    <string name="share">SHARE</string>
    <string name="us">ABOUT US</string>
    <string name="configuration">SETTINGS</string>
    <string name="exit">EXIT</string>
    <string name="titleShare">Share and contact</string>
    <string name="titleAdjust">Adjustments</string>

    <string name="about_welcome">¡Welcome to ProMotion App!</string>
    <string name="about_title_label">Us</string>
    <string name="about_us_question_text">About us?</string>
    <string name="our_team_text">Our team:</string>
    <string name="owner_develop_text">Owner / Developer</string>
    <string name="how_affiliate_question">How can I join?</string>
    <string name="email_label_text">E-mail: </string>
    <string name="phone_label_text">Phone: </string>
    <string name="contactus_text">Contact us</string>
    <string name="notifications_text">Notifications</string>
    <string name="update_text">Updates</string>
    <string name="how_update_app">Update Promotion App:</string>
    <string name="update_forever_text">Update always</string>
    <string name="update_with_wifi_text">Update only with Wifi</string>
    <string name="update_never_text">Never Update</string>
    <string name="each_minute_text">Each minute</string>
    <string name="each_hour_text">Each hour</string>
    <string name="everyday_text">Everyday</string>

    <string name="leave_app">Are you sure you want to leave Promotion App?</string>
    <string name="ok_leave">Ok to leave!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>



</resources>
