<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    tools:context="com.EPDev.PromotionAppIcc.AboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/app_bar_about"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@mipmap/backrombobluepurple"
            android:padding="10dp"
            android:gravity="">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_menu_launcher"
                android:background="#00000000"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¡Bienvenido a Promotion App!"
                android:textColor="#FFFFFF"
                android:layout_marginTop="100dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:fontFamily="casual"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_shadow"
                    android:orientation="vertical"
                    android:layout_margin="5dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="¿Que es ProMotion App?"
                        android:textSize="17dp"
                        android:fontFamily="casual"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:background="@color/colorAccent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_description"
                            android:fontFamily="casual"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textStyle="bold"
                            android:text="Nuestro equipo: "
                            android:fontFamily="casual"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@mipmap/edwin_icon"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Edwin Alvarado"
                                    android:fontFamily="casual"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Dueño / Desarrollador"
                                    android:fontFamily="casual"
                                    android:textStyle="bold"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@mipmap/pedro_icon"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Pedro Diaz"
                                    android:fontFamily="casual"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Dueño / Desarrollador"
                                    android:fontFamily="casual"
                                    android:textStyle="bold"/>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_shadow"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="¿Como puedo afiliarme?"
                        android:textSize="17dp"
                        android:fontFamily="casual"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:background="@color/colorAccent"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/app_suscribe"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:id="@+id/link_portal"
                        android:layout_height="wrap_content"
                        android:linksClickable="true"
                        android:autoLink="web"
                        android:text="https://promotion-admin.herokuapp.com/login"
                        android:fontFamily="casual"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_shadow"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Contactanos"
                        android:textSize="17dp"
                        android:fontFamily="casual"
                        android:textColor="#FFFFFF"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:background="@color/colorAccent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/contactanos"
                                android:fontFamily="casual"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingBottom="5dp"
                                android:paddingTop="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Correo:  "
                                    android:textStyle="bold"
                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="contacto@promotion.com"
                                    />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Telefono:  "
                                    android:textStyle="bold"

                                    />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="(+58) (212) 693-82-28"
                                    />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>